fixing table td alignment

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -218,7 +218,7 @@ div.content-index {
   box-shadow: 5px 5px 4px rgba(0,0,0,.5);
 }
 
-table td {
+.table td {
   vertical-align: middle;
 }
 
